--- a/style.css
+++ b/style.css
@@ -6,19 +6,47 @@
 body {
   background-color: Linen;
 }
-ul {
-  margin: 50px;
+#content {
+  width: 920px;
+  margin: 30px;
+  padding: 30px;
 }
+
+/* indiviual questions */
 li {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+}
+h3 {
+  font-family: Open Sans;
+  font-size: 14px;
+  margin: 15px;
 }
 input {
   background-color: Gainsboro;
-  min-width: 220px;
-  padding: 5px;
+  width: 220px;
+  padding: 10px;
   margin: 5px;
   border: 2px solid White;
+  border-radius: 10px;
+  font-size: 12px;
 }
 input:hover {
   background-color: White;
+}
+
+/* counter */
+#score-count {
+  width: 75px;
+  height: 50px;
+  background-color: lightSteelBlue;
+  border: 2px solid White;
+  border-radius: 15px;
+  margin: auto;
+}
+h4 {
+  color: White;
+  font-family: Montserrat;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 5px;
 }
