--- a/style.css
+++ b/style.css
@@ -11,15 +11,21 @@ body {
   margin: 30px;
   padding: 30px;
 }
+h1 {
+  font-family: Montserrat;
+  font-size: 40px;
+  margin-bottom: 30px;
+  text-align: center;
+}
 
 /* indiviual questions */
 li {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 h3 {
   font-family: Open Sans;
   font-size: 14px;
-  margin: 15px;
+  margin: 5px 15px;
 }
 input {
   background-color: Gainsboro;
@@ -48,5 +54,5 @@ h4 {
   font-family: Montserrat;
   font-size: 30px;
   text-align: center;
-  margin-top: 5px;
+  margin-top: 6px;
 }
