--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
   background-color: LightSteelBlue;
 }
 #wrapper {
-  width: 770px;
+  width: 755px;
   margin: auto;
 }
 h1 {
   font-family: Montserrat;
   font-size: 40px;
   display: block;
-  margin: 30px 0px;
+  margin: 50px 0px 0px 0px;
   text-align: center;
 }
 .container {
@@ -46,7 +46,7 @@ h2 {
 #start {
   width: 200px;
   display: block;
-  margin: 30px auto;
+  margin: auto;
 }
 #start:active {
   background-color: SteelBlue;
@@ -65,7 +65,8 @@ h3 {
   margin: 5px 10px;
 }
 input {
-  width: 320px;
+  background-color: White;
+  width: 310px;
   padding: 10px;
   margin: 5px;
   border: 2px solid Black;
